we run at maximised now