@@ -73,7 +73,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>ui.EditorApp</mainClass>
+                    <mainClass>koda/ui.EditorApp</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>java.base/jdk.internal.misc=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
+                        <option>java.base/sun.misc=ALL-UNNAMED</option>
+                        <option>-Dsun.misc.Unsafe.allowTerminallyDeprecated=true</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
